team 2 columns on mobile, bug fix scroll of media-content

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -138,6 +138,9 @@ header{
         font-size: $font-size-m;
       }
     }
+    .media-content{
+      overflow: hidden;
+    }
   }
   ul {
     margin-left: 0;
